--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
 name = "rich-sdl2-net-rust"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["MikuroXina <ryosukadnak@gmail.com>"]
-edition = "2018"
+edition = "2021"
 description = "The sdl_net 2.0 wrapper for Rust."
 repository = "https://github.com/MikuroXina/rich-sdl2-net-rust"
 documentation = "https://mikuroxina.github.io/rich-sdl2-net-rust/rich_sdl2_net_rust/"
 license = "Apache-2.0"
 keywords = ["sdl2", "wrapper", "binding"]
 categories = ["network-programming"]
+rust-version = "1.56"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rich-sdl2-rust = "0.9.0"
+rich-sdl2-rust = "0.10.0"
 
 [build-dependencies]
 bindgen = "0.59.1"
